--- a/css/estilos.css
+++ b/css/estilos.css
@@ -1,3 +1,43 @@
-body{
+body {
+    background-color: #02010a;
+    font-family: 'Dancing Script', cursive;
+}
+
+img {
+    box-shadow: 2px 2px 5px 0 #02010a;
+}
+
+header {
     background-color: #5b7989;
+    color: whitesmoke;
+    border-radius: 10px 10px 0 0;
+    padding: 2px 20px 10px 20px;
+}
+
+header h1.nav_title {
+    text-shadow: 2px 2px #02010a;
+    max-width: 60%;
+}
+
+header nav.nav_bar {}
+
+header nav.nav_bar a {
+    color: whitesmoke;
+    margin: 2px 10px
+}
+
+header nav.nav_bar a.active {
+    text-decoration: none;
+}
+
+div#contenido {
+    width: 100%;
+    display: flex;
+    flex-flow: row wrap;
+    align-content: center;
+    margin: auto;
+}
+
+@media all and (min-width:900px) {
+    width: 900px;
 }
