Pagina Index y estilos CSS funcionando segun lo esperado

--- a/css/estilos.css
+++ b/css/estilos.css
@@ -14,6 +14,21 @@ img {
 }
 
 /**
+ * Efectos para las imagenes
+*/
+img[class="rotacion"]:hover {
+    box-shadow: 2px 2px #82c3a6;
+    transform: rotate(10deg);
+    -webkit-transform: rotate(10deg);
+}
+
+img[class="traslacion"]:hover{
+    box-shadow: 2px 2px #82c3a6;
+    transform: translate(20px,-5px);
+    -webkit-transform: translate(20px,-5px);
+}
+
+/**
  * Contenedor de la pagina
 */
 #contenido {
@@ -30,7 +45,7 @@ img {
     background-color: #5b7989;
     border-top-left-radius: 10px;
     border-top-right-radius: 10px;
-    padding: 2px 20px 10px 20px;
+    padding: 10px 20px 0 20px;
     color: white;
     width: 100%;
     display: flex;
@@ -39,21 +54,29 @@ img {
     justify-content: space-around;
 }
 
+#header .nav_title {
+    width: 70%;
+}
+
 #header .nav_title h1 {
     text-shadow: 2px 2px #02010a;
     text-align: left;
 }
 
+#header .nav_menu {
+    width: 30%;
+}
+
 #header .nav_menu nav {
     display: flex;
     flex-wrap: wrap;
-    align-items: center;
 }
 
 #header .nav_menu nav a {
     margin: 2px 10px;
     color: whitesmoke;
     text-align: center;
+    padding-top: 20px;
 }
 
 #header .nav_menu nav a.active {
@@ -70,7 +93,6 @@ img {
 }
 
 #seccion_central figure {
-    width: 90%;
     padding: 10px;
 }
 
@@ -85,6 +107,25 @@ img {
 #seccion_secundaria {
     background-color: #d5c75f;
     width: 100%;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+}
+
+#seccion_secundaria figure {
+    width: 40%;
+}
+
+#seccion_secundaria figure p {
+    width: 100%;
+    text-align: center;
+	text-decoration: underline;
+}
+
+#seccion_secundaria figure img {
+    width: 100%;
+    transition-property: transform;
+    transition-duration: 2s;
 }
 
 /**
@@ -97,6 +138,13 @@ img {
     border-bottom-right-radius: 10px;
     padding: 2px 20px 10px 20px;
     width: 100%;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-around;
+}
+
+#footer div {
+    margin: 5px;
 }
 
 #footer .icons {
@@ -117,7 +165,6 @@ img {
     box-shadow: 0 0;
 }
 
-/*
 @media all and (max-width:900px) and (min-width:700px) {
     #contenido {
         width: 100%;
@@ -125,6 +172,57 @@ img {
 
     #header {
         width: 100%;
-    } 
+    }
+
+    #header .nav_title {
+        width: 100%;
+    }
+
+    #header .nav_menu {
+        width: 100%;
+    }
+
+    #seccion_secundaria figure {
+        width: 60%;
+    }
+
+    #footer {
+        display: grid;
+    }
 }
-*/
+
+@media all and (max-width:700px) {
+    #contenido {
+        width: 100%;
+    }
+
+    #header {
+        text-align: center;
+    }
+
+    #header .nav_title {
+        width: 100%;
+    }
+
+    #header .nav_title h1 {
+        text-shadow: 2px 2px #02010a;
+        text-align: center;
+    }
+
+    #header .nav_menu {
+        width: 100%;
+    }
+
+    #header .nav_menu nav {
+        display: inline;
+        flex-wrap: wrap;
+    }
+
+    #seccion_secundaria figure {
+        width: 60%;
+    }
+
+    #footer {
+        display: grid;
+    }
+}
